--- a/src/app/privacy/privacy.page.html
+++ b/src/app/privacy/privacy.page.html
@@ -1,13 +1,28 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Privacy</ion-title>
+    <ion-title>Privacy Policy</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['/tabs/helping']">
+        <ion-icon slot="icon-only" name="help-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">privacy</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Privacy and Security Policy</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <h3>Data Collection</h3>
+      <p>We only collect necessary inventory management data, including basic information such as project names, quantities, prices, etc.</p>
+      
+      <h3>Data Security</h3>
+      <p>All data transmission is encrypted, and we take appropriate security measures to protect your data.</p>
+      
+      <h3>Data Use</h3>
+      <p>The collected data is only used for inventory management purposes and will not be shared with third parties.</p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
