--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,17 +1,24 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Search
-    </ion-title>
+    <ion-title>Search</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['/tabs/helping']">
+        <ion-icon slot="icon-only" name="help-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content class="ion-padding">
+  <ion-searchbar placeholder="Search for item name"></ion-searchbar>
+  
+  <ion-list>
+    <!-- 项目列表将在后续开发中添加 -->
+    <ion-item>
+      <ion-label>
+        <h3>Example item</h3>
+        <p>Quantity: 10 | Price: $100</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
