--- a/src/app/update/update.page.html
+++ b/src/app/update/update.page.html
@@ -1,17 +1,26 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Update
-    </ion-title>
+    <ion-title>Update</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['/tabs/helping']">
+        <ion-icon slot="icon-only" name="help-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-content class="ion-padding">
+  <ion-searchbar placeholder="Search for item name to edit"></ion-searchbar>
+  
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Edit Item</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <!-- 编辑表单将在后续开发中添加 -->
+      <p>The item editing form will be displayed here</p>
+      <ion-button expand="block" color="primary">Update</ion-button>
+      <ion-button expand="block" color="danger">Delete</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
