--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,23 +1,31 @@
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="add">
-      <ion-icon name="add-circle"></ion-icon>
-      <ion-label>Add</ion-label>
-    </ion-tab-button>
-    
-    <ion-tab-button tab="search">
-      <ion-icon name="search"></ion-icon>
-      <ion-label>Search</ion-label>
-    </ion-tab-button>
-    
-    <ion-tab-button tab="update">
-      <ion-icon name="create"></ion-icon>
-      <ion-label>Update</ion-label>
-    </ion-tab-button>
-    
-    <ion-tab-button tab="privacy">
-      <ion-icon name="lock-closed"></ion-icon>
-      <ion-label>privacy</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs>
+<ion-header>
+  <ion-toolbar>
+      <ion-input 
+          [(ngModel)]="inputModel"
+          class="search" placeholder="search">
+      </ion-input>
+      <ion-buttons slot="secondary">
+          <ion-button fill="solid" routerLink="/help">
+            Help
+          </ion-button>
+      </ion-buttons>
+      <ion-buttons slot="end">
+          <ion-button (click)="search()">
+              <ion-icon slot="icon-only" name="search"></ion-icon>
+          </ion-button>
+      </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true">
+  <ion-item button *ngFor="let item of goods">
+      <ion-label routerLink="/detail" [queryParams]="{name: item.item_name}">
+          <h3> 
+              {{item.item_name}} 
+              <ion-badge color="primary" style="float: right;">
+                  {{item.price}}
+              </ion-badge>
+          </h3>
+      </ion-label>
+  </ion-item>
+</ion-content>
